--- a/addons/loan_collection/views/additional_record.xml
+++ b/addons/loan_collection/views/additional_record.xml
@@ -2,43 +2,43 @@
   <data>
     <!-- views -->
     <record model="ir.ui.view" id="list_additional_record_col">
-        <field name="name">补单记录列表</field>
+        <field name="name">Reorder Record List</field>
         <field name="model">additional.record</field>
         <field name="arch" type="xml">
             <tree create='0' import="0" export_xlsx="0">
-                <field name="order_no" optional="show" />
-                <field name="order_user_id" optional="show" />
-                <field name="addition_type" optional="show" />
-                <field name="order_user_name" optional="show" />
-                <field name="order_user_phone" optional="show" />
-                <field name="apply_time" optional="show" string="补单时间" />
-                <field name="utr" optional="show" />
-                <field name="amount" optional="show" />
-                <field name="attachment_id" widget="btn_field" />
-                <field name="status" optional="show" />
-                <field name="approval_user_id" optional="show" />
-                <field name="apply_user_id" optional="show" />
-                <field name="close_reason" optional="show" />
+                <field name="order_no" string="Order ID" optional="show" />
+                <field name="order_user_id" string="UserID" optional="show" />
+                <field name="addition_type" string="Business Category" optional="show" />
+                <field name="order_user_name" string="Name" optional="show" />
+                <field name="order_user_phone" string="Phone Number" optional="show" />
+                <field name="apply_time" optional="show" string="Reorder Time" />
+                <field name="utr" string="UTR" optional="show" />
+                <field name="amount" string="Reorder Amount" optional="show" />
+                <field name="attachment_id" string="Credentials Image" widget="btn_field" />
+                <field name="status" string="Status" optional="show" />
+                <field name="approval_user_id" string="Auditor" optional="show" />
+                <field name="apply_user_id" string="Applicant" optional="show" />
+                <field name="close_reason" string="Reason for Closing the Account" optional="show" />
             </tree>
         </field>
     </record>
 
     <record model="ir.ui.view" id="search_additional_record_col">
-        <field name="name">补单记录搜索</field>
+        <field name="name">Reorder Record Search</field>
         <field name="model">additional.record</field>
         <field name="arch" type="xml">
             <search>
-                <field name="order_no"/>
-                <field name="order_user_id" />
-                <field name="order_user_phone"/>
-                <field name="status" />
-                <field name="addition_type" />
+                <field name="order_no" string="Order ID"/>
+                <field name="order_user_id" string="UserID"/>
+                <field name="order_user_phone" string="Phone Number"/>
+                <field name="status" string="Status"/>
+                <field name="addition_type" string="Business Category"/>
             </search>
         </field>
     </record>
     <!-- action views -->
     <record model="ir.actions.act_window" id="act_additional_record_col">
-        <field name="name">补单审核</field>
+        <field name="name">Reorder Review</field>
         <field name="res_model">additional.record</field>
         <field name="view_mode">tree</field>
         <field name="context">{
