--- a/addons/loan_collection/views/derate_record.xml
+++ b/addons/loan_collection/views/derate_record.xml
@@ -1,7 +1,7 @@
 <odoo>
     <data>
         <record id="list_derate_record_fin_s1" model="ir.ui.view">
-            <field name="name">减免审核列表</field>
+            <field name="name">Remission Review List</field>
             <field name="model">derate.record</field>
             <field name="inherit_id" ref="loan_financial.list_derate_record_s1"/>
             <field name="arch" type="xml">
@@ -12,7 +12,7 @@
         </record>
 
         <record id="list_fin_derate_record" model="ir.ui.view">
-            <field name="name">减免记录列表</field>
+            <field name="name">Remission Record List</field>
             <field name="model">derate.record</field>
             <field name="inherit_id" ref="loan_financial.list_derate_record"/>
             <field name="arch" type="xml">
@@ -23,99 +23,99 @@
         </record>
         
         <record model="ir.ui.view" id="list_derate_record_col_s1">
-            <field name="name">减免审核列表</field>
+            <field name="name">Remission Review List</field>
             <field name="model">derate.record</field>
             <field name="arch" type="xml">
                 <tree create='0' import="0" export_xlsx="0" default_order="apply_time desc">
                     <header>
-                        <button name="action_col_derate_batch_approval" type="object" string="批量审核" class="oe_highlight" display="always"/>
-                        <button name="action_col_derate_setting" type="object" string="自动审核配置" display="always"/>
+                        <button name="action_col_derate_batch_approval" type="object" string="Batch Review" class="oe_highlight" display="always"/>
+                        <button name="action_col_derate_setting" type="object" string="Auto Review Configuration" display="always"/>
                     </header>
-                    <field name="derate_no" optional="show" />
-                    <field name="order_id" optional="show" />
-                    <field name="loan_uid" optional="show" />
-                    <field name="loan_user_name" optional="show" />
-                    <field name="loan_user_phone" optional="show" />
-                    <field name="order_apply_time" optional="show" />
-                    <field name="derate_amount" optional="show" />
-                    <field name="order_pending_amount" optional="show" />
-                    <field name="collection_stage_setting_id" optional="show" />
-                    <field name="derate_type" optional="show" />
-                    <field name="apply_user_id" optional="show" />
-                    <field name="valid_time" string='有效期' optional="show" />
-                    <field name="apply_reason" optional="show" />
-                    <field name="product_id" optional="show" />
-                    <field name="app_id" optional="show" />
-                    <field name="app_version" optional="show" />
-                    <button name="action_show_col_approval" type="object" string="通过" context="{'flag': 1}"/>
-                    <button name="action_show_col_approval" type="object" string="拒绝" context="{'flag': 0}"/>
+                    <field name="derate_no" string="Derate ID" optional="show" />
+                    <field name="order_id" string="Order ID"  optional="show" />
+                    <field name="loan_uid" string="UserID" optional="show" />
+                    <field name="loan_user_name" string="Name" optional="show" />
+                    <field name="loan_user_phone" string="Phone Number" optional="show" />
+                    <field name="order_apply_time" string="Application Date" optional="show" />
+                    <field name="derate_amount" string="Remission Amount" optional="show" />
+                    <field name="order_pending_amount" string="Bill Amount" optional="show" />
+                    <field name="collection_stage_setting_id" string="Collection Phase" optional="show" />
+                    <field name="derate_type" string="Remission Type" optional="show" />
+                    <field name="apply_user_id" string="Applicant" optional="show" />
+                    <field name="valid_time" string='Validity' optional="show" />
+                    <field name="apply_reason" string="Application Reason" optional="show" />
+                    <field name="product_id" string="Product Name" optional="show" />
+                    <field name="app_id" string="APP name" optional="show" />
+                    <field name="app_version" string="App version" optional="show" />
+                    <button name="action_show_col_approval" type="object" string="Pass" context="{'flag': 1}"/>
+                    <button name="action_show_col_approval" type="object" string="Refuse" context="{'flag': 0}"/>
                 </tree>
             </field>
         </record>
 
         <record model="ir.ui.view" id="search_derate_record_col_s1">
-            <field name="name">减免审核搜索</field>
+            <field name="name">Remission Review Search</field>
             <field name="model">derate.record</field>
             <field name="arch" type="xml">
                 <search>
                     <!-- <field name="derate_no"/> -->
-                    <field name="order_no"/>
-                    <field name="loan_uid" />
+                    <field name="order_no" string="Order ID"/>
+                    <field name="loan_uid" string="UserID"/>
                     <!-- <field name="loan_user_phone"/> -->
-                    <field name="derate_type" />
-                    <field name="order_apply_time" />
+                    <field name="derate_type" string="Remission Type"/>
+                    <field name="order_apply_time" string="Application Date"/>
                 </search>
             </field>
         </record>
 
         <record model="ir.ui.view" id="list_derate_record_col">
-            <field name="name">减免记录列表</field>
+            <field name="name">Remission Record List</field>
             <field name="model">derate.record</field>
             <field name="arch" type="xml">
                 <tree create='0' import="0" export_xlsx="0" default_order="col_approval_time desc">
-                    <field name="derate_no" optional="show" />
-                    <field name="order_id" optional="show" />
-                    <field name="loan_uid" optional="show" />
-                    <field name="loan_user_name" optional="show" />
-                    <field name="loan_user_phone" optional="show" />
-                    <field name="product_id" optional="show" />
-                    <field name="order_apply_time" optional="show" />
-                    <field name="derate_amount" optional="show" />
-                    <field name="derate_type" optional="show" />
-                    <field name="collection_stage_setting_id" optional="show" />
-                    <field name="apply_user_id" optional="show" />
-                    <field name="apply_reason" optional="show" />
-                    <field name="valid_time" optional="show" />
+                    <field name="derate_no" string="Derate ID" optional="show" />
+                    <field name="order_id" string="Order ID"  optional="show" />
+                    <field name="loan_uid" string="UserID" optional="show" />
+                    <field name="loan_user_name" string="Name" optional="show" />
+                    <field name="loan_user_phone" string="Phone Number" optional="show" />
+                    <field name="product_id" string="Product Name" optional="show" />
+                    <field name="order_apply_time" string="Application Date" optional="show" />
+                    <field name="derate_amount" string="Remission Amount" optional="show" />
+                    <field name="derate_type" string="Remission Type" optional="show" />
+                    <field name="collection_stage_setting_id" string="Collection Phase" optional="show" />
+                    <field name="apply_user_id" string="Applicant" optional="show" />
+                    <field name="apply_reason" string="Application Reason" optional="show" />
+                    <field name="valid_time" string='Validity' optional="show" />
 
-                    <field name="col_approval_time" optional="show" />
-                    <field name="col_approval_user_id" optional="hide" />
-                    <field name="fin_approval_time" optional="show" />
-                    <field name="fin_approval_user_id" optional="show" />
-                    <field name="fin_approval_status" string="审核结果" optional="show" />
-                    <field name="col_approval_remark" optional="show" />
-                    <field name="fin_approval_remark" optional="show" />
+                    <field name="col_approval_time" string="Collection Audit Time" optional="show" />
+                    <field name="col_approval_user_id" string="Collection Auditor" optional="hide" />
+                    <field name="fin_approval_time" string="Finance Review Time" optional="show" />
+                    <field name="fin_approval_user_id" string="Finance Auditor" optional="show" />
+                    <field name="fin_approval_status" string="Review Result" optional="show" />
+                    <field name="col_approval_remark" string="Collection Remark" optional="show" />
+                    <field name="fin_approval_remark" string="Finance Remark" optional="show" />
                 </tree>
             </field>
         </record>
 
         <record model="ir.ui.view" id="search_derate_record_col">
-            <field name="name">减免记录搜索</field>
+            <field name="name">Remission Record Search</field>
             <field name="model">derate.record</field>
             <field name="arch" type="xml">
                 <search>
-                    <field name="derate_no"/>
-                    <field name="order_no"/>
-                    <field name="loan_uid" />
-                    <field name="loan_user_phone" />
-                    <field name="product_id" />
-                    <field name="derate_type" />
-                    <field name="order_apply_time" />
+                    <field name="derate_no" string="Derate ID"/>
+                    <field name="order_no" string="Order ID"/>
+                    <field name="loan_uid" string="UserID"/>
+                    <field name="loan_user_phone" string="Phone Number"/>
+                    <field name="product_id" string="Product Name"/>
+                    <field name="derate_type" string="Remission Type"/>
+                    <field name="order_apply_time" string="Application Date"/>
                 </search>
             </field>
         </record>
         
         <record model="ir.ui.view" id="form_derate_record_col_apply">
-            <field name="name">减免申请表单</field>
+            <field name="name">Remission Application Form</field>
             <field name="model">derate.record</field>
             <field name="arch" type="xml">
                 <form>
@@ -123,20 +123,20 @@
                         <field name="order_id" invisible="1"/>
                         <field name="col_approval_status" invisible="1"/>
                         <group>
-                            <field name="order_no" />
-                            <field name="loan_user_name" />
-                            <field name="collection_stage_setting_id" readonly="1" force_save="1" />
-                            <field name="loan_cycle" readonly="1" force_save="1"/>
-                            <field name="max_derate_amount" readonly="1" force_save="1" />
-                            <field name="derate_amount" required="1" />
-                            <field name="derate_type"  options="{'horizontal': True}"/>
-                            <field name="valid_time" invisible="derate_type=='2'" />
-                            <field name="apply_reason" />
+                            <field name="order_no" string="Order ID"/>
+                            <field name="loan_user_name" string="Name"/>
+                            <field name="collection_stage_setting_id" string="Collection Phase" readonly="1" force_save="1" />
+                            <field name="loan_cycle" string="Loan Cycle" readonly="1" force_save="1"/>
+                            <field name="max_derate_amount" string="Max Remission Amount" readonly="1" force_save="1" />
+                            <field name="derate_amount" string="Remission Amount" required="1" />
+                            <field name="derate_type"  string="Remission Type" options="{'horizontal': True}"/>
+                            <field name="valid_time" string='Validity' invisible="derate_type=='2'" />
+                            <field name="apply_reason" string="Application Reason"/>
                         </group>
                     </sheet>
                     <footer>
-                        <button string="取消" class="btn btn-default" special="cancel"/>
-                        <button string="提交" type="object" name="action_col_create" class="oe_highlight"/>
+                        <button string="Cancel" class="btn btn-default" special="cancel"/>
+                        <button string="Submit" type="object" name="action_col_create" class="oe_highlight"/>
                     </footer>
                 </form>
             </field>
@@ -144,7 +144,7 @@
 
         <!-- action views -->
         <record model="ir.actions.act_window" id="act_derate_record_col_s1">
-            <field name="name">金额减免审核</field>
+            <field name="name">Review of Amount Remission</field>
             <field name="res_model">derate.record</field>
             <field name="view_mode">tree</field>
             <field name="domain">[('col_approval_status', '=', '1')]</field>
@@ -156,7 +156,7 @@
         </record>
 
         <record model="ir.actions.act_window" id="act_derate_record_col">
-            <field name="name">金额减免记录</field>
+            <field name="name">Amount Remission Record</field>
             <field name="res_model">derate.record</field>
             <field name="view_mode">tree</field>
             <field name="domain">[('col_approval_status', 'in', ['2', '3'])]</field>
