--- a/addons/loan_collection/views/extension_record.xml
+++ b/addons/loan_collection/views/extension_record.xml
@@ -2,48 +2,48 @@
   <data>
     <!-- views -->
     <record model="ir.ui.view" id="list_extension_record_col">
-        <field name="name">展期记录列表</field>
+        <field name="name">Extension Record List</field>
         <field name="model">extension.record</field>
         <field name="arch" type="xml">
             <tree create='0' import="0" export_xlsx="0" default_order="success_time desc">
-                <field name="order_no" optional="show" />
-                <field name="loan_uid" optional="show" />
-                <field name="status" optional="show" />
-                <field name="platform_order_no" string="展期付款码" optional="show" />
-                <field name="loan_user_name" optional="show" />
-                <field name="loan_user_phone" optional="show" />
-                <field name="product_id" optional="show" />
-                <field name="apply_time" optional="show" />
-                <field name="success_time" string="展期支付完成时间" optional="show" />
-                <field name="extension_days" optional="show" />
-                <field name="order_repay_date" optional="show" />
-                <field name="extension_repay_date" optional="show" />
-                <field name="extension_amount" string='展期应付金额' optional="show" />
-                <field name="repayed_amount" string='展期实付金额' optional="hide" />
-                <field name="actual_entry_amount" optional="show" />
-                <field name="repayed_fee" optional="show" />
-                <field name="repayed_tax" optional="hide" />
+                <field name="order_no" string="Order ID" optional="show" />
+                <field name="loan_uid" string="UserID" optional="show" />
+                <field name="status" string="Status" optional="show" />
+                <field name="platform_order_no" string="Extension Number" optional="show" />
+                <field name="loan_user_name" string="Name" optional="show" />
+                <field name="loan_user_phone" string="Phone Number" optional="show" />
+                <field name="product_id" string="Product Name" optional="show" />
+                <field name="apply_time" string="Application Date" optional="show" />
+                <field name="success_time" string="Extension Payment Completed Time" optional="show" />
+                <field name="extension_days" string="Extension Days" optional="show" />
+                <field name="order_repay_date" string="Order Repay Date" optional="show" />
+                <field name="extension_repay_date" string="Extension Repay Date" optional="show" />
+                <field name="extension_amount" string='Extension Repay Amount' optional="show" />
+                <field name="repayed_amount" string='Extension Repayed Amount' optional="hide" />
+                <field name="actual_entry_amount" string="Actual Entry Amount" optional="show" />
+                <field name="repayed_fee" string="Extension Fee" optional="show" />
+                <field name="repayed_tax" string="Extension Tax" optional="hide" />
                 
-                <field name="repay_count" optional="show" />
-                <field name="extension_start_date" optional="show" />
-                <field name="extension_end_date" optional="show" />
+                <field name="repay_count" string="Extension Repay Count" optional="show" />
+                <field name="extension_start_date" string="Extension Start Date" optional="show" />
+                <field name="extension_end_date" string="Extension End Date" optional="show" />
 
-                <button name="action_show_settle_wizard" type="object" string="平账" invisible="status in ['2', '5', '6']"/>
+                <button name="action_show_settle_wizard" type="object" string="Flat" invisible="status in ['2', '5', '6']"/>
             </tree>
         </field>
     </record>
 
     <record model="ir.ui.view" id="search_extension_record_col">
-        <field name="name">展期记录搜索</field>
+        <field name="name">Extension Record Search</field>
         <field name="model">extension.record</field>
         <field name="arch" type="xml">
             <search>
-                <field name="order_no"/>
-                <field name="loan_uid" />
-                <field name="loan_user_phone"/>
-                <field name="platform_order_no" string="展期付款码"/>
-                <field name="product_id"/>
-                <field name="status"/>
+                <field name="order_no" string="Order ID"/>
+                <field name="loan_uid" string="UserID"/>
+                <field name="loan_user_phone" string="Phone Number"/>
+                <field name="platform_order_no" string="Extension Number"/>
+                <field name="product_id" string="Product Name"/>
+                <field name="status" string="Status"/>
             </search>
         </field>
     </record>
@@ -51,7 +51,7 @@
 
     <!-- action views -->
     <record model="ir.actions.act_window" id="act_extension_record_col">
-        <field name="name">展期记录</field>
+        <field name="name">Extension Record</field>
         <field name="res_model">extension.record</field>
         <field name="view_mode">tree</field>
         <!-- <field name="domain">[('repay_status', '=', '1')]</field> -->
