--- a/addons/loan_financial/views/black_list.xml
+++ b/addons/loan_financial/views/black_list.xml
@@ -2,61 +2,62 @@
   <data>
     <!-- views -->
     <record model="ir.ui.view" id="list_black_list">
-        <field name="name">黑名单列表</field>
+        <field name="name">Blacklist List</field>
         <field name="model">black.list</field>
         <field name="arch" type="xml">
             <tree create='0' import="0" export_xlsx="0">
                 <header>
-                    <button class="btn-primary" name="action_create" type="object" string="新增" display="always"/>
+                    <button class="btn-primary" name="action_create" type="object" string="Add" display="always"/>
                 </header>
-                <field name="phone_no"/>
-                <field name="user_name"/>
-                <field name="id_card_no"/>
-                <field name="bank_account_no"/>
-                <field name="reason"/>
-                <field name="create_date" optional="show" string="录入时间"/>
-                <field name="create_uid" optional="show" string="操作人"/>
+                <field name="phone_no" string="Phone Number"/>
+                <field name="user_name" string="Name"/>
+                <field name="id_card_no" string="ID Number"/>
+                <field name="bank_account_no" string="Bank Account Number"/>
+                <field name="reason" string="Reason"/>
+                <field name="create_date" optional="show" string="Entry Time"/>
+                <field name="create_uid" optional="show" string="Operator"/>
                 
-                <field name="write_uid" optional="hide"/>
-                <field name="write_date" optional="hide"/>
+                <field name="write_uid" string="Last Updated On" optional="hide"/>
+                <field name="write_date" string="Last Updated By" optional="hide"/>
                 
-                <button name="action_edit" type="object" string="编辑"/>
-                <button name="toggle_active" type="object" string="删除" confirm="删除后不可恢复, 确认删除?"/>
+                <button name="action_edit" type="object" string="Edit"/>
+                <button name="toggle_active" type="object" string="Delete"
+                        confirm="After deletion, it cannot be restored. Are you sure to delete it?"/>
             </tree>
         </field>
     </record>
 
     <record model="ir.ui.view" id="search_black_list">
-        <field name="name">黑名单搜索</field>
+        <field name="name">Blacklist Search</field>
         <field name="model">black.list</field>
         <field name="arch" type="xml">
             <search>
-                <field name="phone_no"/>
-                <field name="user_name"/>
-                <field name="id_card_no"/>
-                <field name="bank_account_no"/>
+                <field name="phone_no" string="Phone Number"/>
+                <field name="user_name" string="Name"/>
+                <field name="id_card_no" string="ID Number"/>
+                <field name="bank_account_no" string="Bank Account Number"/>
             </search>
         </field>
     </record>
 
     <record model="ir.ui.view" id="form_black_list">
-        <field name="name">黑名单详情</field>
+        <field name="name">Blacklist Detail</field>
         <field name="model">black.list</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
                     <field name="id" invisible="1"/>
                     <group>
-                        <field name="phone_no"/>
-                        <field name="user_name"/>
-                        <field name="id_card_no"/>
-                        <field name="bank_account_no"/>
-                        <field name="reason"/>
+                        <field name="phone_no" string="Phone Number"/>
+                        <field name="user_name" string="Name"/>
+                        <field name="id_card_no" string="ID Number"/>
+                        <field name="bank_account_no" string="Bank Account Number"/>
+                        <field name="reason" string="Reason"/>
                     </group>
                 </sheet>
                 <footer>
-                    <button string="取消" class="btn btn-default" special="cancel"/>
-                    <button string="确认" special="save" class="oe_highlight"/>
+                    <button string="Cancel" class="btn btn-default" special="cancel"/>
+                    <button string="Submit" special="save" class="oe_highlight"/>
                 </footer>
             </form>
         </field>
@@ -66,7 +67,7 @@
     <!-- actions opening views on models -->
 
     <record model="ir.actions.act_window" id="act_black_list">
-        <field name="name">黑名单管理</field>
+        <field name="name">Blacklist Management</field>
         <field name="res_model">black.list</field>
         <field name="view_mode">tree</field>
     </record>
